objects/RES_Team__c.object
<CustomObject>
    <description>Vertiba 2/17/2014 - Created to track the team members associated to a project (contacts)</description>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Add RES Team members from CONTACTS (not SF Users) -- This lookup field limits the results of Contacts to only those staff who exist in an Account with &apos;Renewable Energy Systems&apos; or &apos;RES T&amp;D&apos; in the name.</inlineHelpText>
        <label>Employee Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please check that this CONTACT has been created on one of the &apos;Renewable Energy System&apos; Accounts (or the &apos;RES T&amp;D&apos; Account).</errorMessage>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Renewable Energy Systems</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>RES T&amp;D</value>
            </filterItems>
            <infoMessage>Add RES Team members from CONTACTS (not SF Users) -- This lookup field limits the results of Contacts to only those staff who exist in an Account with &apos;Renewable Energy Systems&apos; or &apos;RES T&amp;D&apos; in the name.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RES Teams</relationshipLabel>
        <relationshipName>RES_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>RES_Projects__c</referenceTo>
        <relationshipLabel>RES Teams</relationshipLabel>
        <relationshipName>Project_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RES_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RES Team</relationshipLabel>
        <relationshipName>RES_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bid Coordinator</fullName>
                </value>
                <value>
                    <fullName>Bid Development Manager</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Construction Director</fullName>
                </value>
                <value>
                    <fullName>Contracts Team</fullName>
                </value>
                <value>
                    <fullName>Design Phase Manager</fullName>
                </value>
                <value>
                    <fullName>Engineering - Civil</fullName>
                </value>
                <value>
                    <fullName>Engineering - Electrical</fullName>
                </value>
                <value>
                    <fullName>Engineering  - Mechanical</fullName>
                </value>
                <value>
                    <fullName>Engineering - SCADA</fullName>
                </value>
                <value>
                    <fullName>Engineering - Structural</fullName>
                </value>
                <value>
                    <fullName>Engineering - Survey</fullName>
                </value>
                <value>
                    <fullName>Estimator</fullName>
                </value>
                <value>
                    <fullName>Executive Champion</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HSQE</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Operation Maintenance</fullName>
                </value>
                <value>
                    <fullName>Opportunity Owner</fullName>
                </value>
                <value>
                    <fullName>Permitting - Property Manager</fullName>
                </value>
                <value>
                    <fullName>PM - Construction</fullName>
                </value>
                <value>
                    <fullName>PM - Development</fullName>
                </value>
                <value>
                    <fullName>Pre-Construction Manager</fullName>
                </value>
                <value>
                    <fullName>Procore Manager</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Project Director</fullName>
                </value>
                <value>
                    <fullName>Technical Team</fullName>
                </value>
                <value>
                    <fullName>Transmission Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_s_Email__c</fullName>
        <label>User&apos;s Email</label>
        <type>Email</type>
    </fields>
    <label>RES Team</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RES Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>